--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -18,10 +18,10 @@
     <!-- Menu desplegable -> PRODUCTOS -->
     <button id="menuProducto" mat-button [matMenuTriggerFor]="producto">Productos</button>
     <mat-menu #producto="matMenu">
-        <button mat-menu-item routerLink="/producto">General</button>
-        <button mat-menu-item routerLink="/alimentacion">Alimentación</button>
-        <button mat-menu-item routerLink="/indumentaria">Indumentaria</button>
-        <button mat-menu-item routerLink="/juguetes">Juguetes</button>
+        <button mat-menu-item routerLink="/Auriculares">Auriculares</button>
+        <button mat-menu-item routerLink="/Celulares">Celulares</button>
+        <button mat-menu-item routerLink="/Teclados">Teclados</button>
+        <button mat-menu-item routerLink="/Mouses">Mouses</button>
     </mat-menu>
 
     <span class="example-spacer"></span>
