--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -9,27 +9,28 @@
 */
 
 /* CORRESPONDEN A PANTALLAS MÁS PEQUEÑAS -> ej.: celulares */
-@media (min-width: 300px) and (max-width: 700px){
-    mat-toolbar{
+@media (min-width: 300px) and (max-width: 700px) {
+    mat-toolbar {
         background-color: pink;
     }
 
-    #menuInicio{
+    #menuInicio {
         display: none;
     }
 
-    #menuProducto{
+    #menuProducto {
         display: none;
     }
 }
 
 /* ENCAPSULA ESTILOS PARA PANTALLAS MÁS GRANDES -> ej.: computadora, televisor */
-@media (min-width: 700px){
-    mat-toolbar{
-        background-color: rgb(98, 98, 255);
+@media (min-width: 700px) {
+    mat-toolbar {
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(25, 5, 112, 1) 38%, rgba(24, 30, 139, 1) 67%, rgba(64, 24, 121, 1) 85%, rgba(45, 0, 107, 1) 100%);
     }
 
-    #menuSecciones{
+    #menuSecciones {
         display: none;
     }
 }
