--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar>
+
+  <div>
+    <img mat-card-image  src="./assets/logos/c (2).png" alt="">
+  </div>
   <!-- Menú desplegable para cuando la pantalla sea menor a 700px -->
     <button id="menuSecciones" mat-icon-button class="example-icon" [matMenuTriggerFor]="seccion">
       <mat-icon>menu</mat-icon>
@@ -9,7 +13,7 @@
       <button mat-menu-item [matMenuTriggerFor]="producto">Productos</button>
     </mat-menu>
 
-    <span>My App</span>
+    
 
     <!-- Se van a mostrar cuando la pantalla sea mayor a 700px -->
     <!-- Botón para la vista de Inicio -->
