--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -1,1 +1,37 @@
-<p>table works!</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Imagen</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Descripcion</th>
+            <th scope="col">Categoria</th>
+            <th scope="col">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let producto of coleccionProductos">
+            <th scope="row">1</th>
+
+            
+            <td><img src="{{producto.Imagen}}" alt="{{producto.Alt}}"></td>
+            <td>{{producto.Nombre}}</td>
+            <td>{{producto.Precio}}</td>
+            <td>{{producto.Descripcion}}</td>
+            <td>{{producto.Categoria}}</td>
+
+            <!--ACCIONES-->
+                <td>
+                    <button id="btn-edit" title="Editar" type="button" class="btn btn-outline-warning">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </td>
+                <td>
+                    <button id="btn-edit" title="Eliminar" type="button" class="btn btn-outline-danger">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+        </tr>
+    </tbody>
+</table>
