--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<h1>Inicio</h1>
+
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -10,14 +10,14 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img mat-card-image  src="./assets/fotos-inicio/auriculares.jpg"  alt="i">
+      <img mat-card-image  src="./assets/fotos-inicio/auriculares.jpg" class="d-block w-100"  alt="i">
     </div>
     <div class="carousel-item">
-      <img src="./assets/fotos-inicio/auriculares.jpg"  alt="Celular">
+      <img src="./assets/fotos-inicio/Celular.jpg"  class="d-block w-100"  alt="Celular">
     </div>
 
     <div class="carousel-item">
-      <img src="./assets/fotos-inicio/teclado.jpg" alt="...">
+      <img src="./assets/fotos-inicio/teclado.jpg" class="d-block w-100"  alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
