--- a/src/app/modules/producto/pages/auriculares/auriculares.component.html
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.html
@@ -1,1 +1,26 @@
 <p>auriculares works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-4" *ngFor="let i of info">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{i.Nombre}}</mat-card-title>
+            <mat-card-subtitle>Edad: {{i.Categoria}}</mat-card-subtitle>
+           
+          </mat-card-header>
+          <img mat-card-image src="{{i.Imagen}}" alt="{{i.Alt}}">
+          <mat-card-subtitle>Edad: {{i.Precio}}$</mat-card-subtitle>
+          <mat-card-content>
+            <p>
+              Raza: {{i.Descripcion}}
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+ 
