vinculamos funcion agregar producto con el primer modal, creamos metodo eliminar producto en nuestro servicio crud; vinculamos metodo del servicio con funcion borrarProducto en table.ts

--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -68,19 +68,16 @@
           </div>
         <!--CATEGORIA-->
           <div class="mb-3">
-            <label class="form-label">Seleccione una categoria</label>
-            <select class="form-control" class="form-select" name="" id=""></select>
-          </div>
-          
           <div class="mb-3">
-            <label class="form-label">Ingrese categoria del producto</label>
-            <input class="form-control" type="text" formControlName="categoria">
-            <option value="auriculares">auriculares</option>
-            <option value="celulares">celulares</option>
-            <option value="mouses">mouses</option>
-            <option value="teclados">teclados</option>
-
-          </div>
+            <label class="form-label">Ingrese categoría del producto</label>
+            <select class="form-control" formControlName="categoria">
+                <option value="auriculares">auriculares</option>
+                <option value="celulares">celulares</option>
+                <option value="mouses">mouses</option>
+                <option value="teclados">teclados</option>
+            </select>
+        </div>
+        
           <!--IMAGEN-->
           <div class="mb-3">
             <label class="form-label">Ingrese una imagen</label>
@@ -94,7 +91,7 @@
 
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn-outline-success" data-bs-dismiss="modal">guardar</button>
+            <button type="button" class="btn-outline-success" data-bs-dismiss="modal" (click)="agregarProducto()">guardar</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
         </div>
       </div>
