configuramos las acciones del modal: editar y eliminar; creamos el modal de eliminar y lo vinculamos con el servicio; creamos el metodo modificarProducto() y funciones de edicion en table.ts

--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,3 +1,7 @@
+<div class="outer-container">
+  <div class="inner-container">
+      <!-- Tu contenido va aquí -->
+
 
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
@@ -50,5 +54,30 @@
     </div>
   </mat-card-header>
 </mat-card>
+</div>
+</div>
+
+<div class="card">
+  <div class="card-image"> <img src="/src/assets/fotos-inicio/Celular.jpg" alt=""></div>
+  <div class="card-text">
+    <span class="date">4 days ago</span>
+    <h2>Post One</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+  </div>
+  <div class="card-stats">
+    <div class="stat">
+      <div class="value">4<sup>m</sup></div>
+      <div class="type">read</div>
+    </div>
+    <div class="stat border">
+      <div class="value">5123</div>
+      <div class="type">views</div>
+    </div>
+    <div class="stat">
+      <div class="value">32</div>
+      <div class="type">comments</div>
+    </div>
+  </div>
+</div>
 <!--card 2-->
 <app-card></app-card>
