--- a/src/app/modules/producto/pages/auriculares/auriculares.component.html
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.html
@@ -5,19 +5,19 @@
         <mat-card class="example-card">
           <mat-card-header>
             <mat-card-title>{{i.Nombre}}</mat-card-title>
-            <mat-card-subtitle>Edad: {{i.Categoria}}</mat-card-subtitle>
+            <mat-card-subtitle>Categoria:{{i.Categoria}}</mat-card-subtitle>
            
           </mat-card-header>
           <img mat-card-image src="{{i.Imagen}}" alt="{{i.Alt}}">
-          <mat-card-subtitle>Edad: {{i.Precio}}$</mat-card-subtitle>
           <mat-card-content>
             <p>
-              Raza: {{i.Descripcion}}
+              Descripcion: {{i.Descripcion}}
             </p>
+            <p>Precio: USD{{i.Precio}}$</p>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <button mat-button>Comprar</button>
+            <button mat-button>Agregar al carrito</button>
           </mat-card-actions>
         </mat-card>
       </div>
