--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -15,7 +15,7 @@
             <th scope="row">1</th>
 
             
-            <td><img src="{{producto.Imagen}}" alt="{{producto.Alt}}"></td>
+            <td><img src="{{producto.Imagen}}" alt="{{producto.Alt}} "  width="100px"></td>
             <td>{{producto.Nombre}}</td>
             <td>{{producto.Precio}}</td>
             <td>{{producto.Descripcion}}</td>
@@ -37,12 +37,14 @@
     </tbody>
 </table>
   <!-- Modal para eliminar el producto -->
-  <div class="modal fade" *ngIf="modalVisibleProducto" id="eliminarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" *ngIf="modalVisibleProducto" id="eliminarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"></div>
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">¿estas seguro de eliminar el producto?</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <!-- ENCABEZADO -->
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">¿Está seguro de eliminar el producto?</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
   
         <!--cuerpo del modal-->
@@ -55,11 +57,11 @@
         <!--acciones del modal-->
         <div class="modal-footer">
           <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" (click)="borrarProducto()">Eliminar</button>
-          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
         </div>
       </div>
     </div>
-  </div>
+ 
 <!-- boton para agregar producto -->
 <button type="button" class="btn btn-online-primary" data-bs-toggle="modal" data-bs-target="#agregarProducto">
     Agregar un nuevo producto
