--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-body{
+/*body{
     background: rgb(36,13,0);
 background: linear-gradient(90deg, rgba(36,13,0,1) 0%, rgba(84,63,45,1) 35%, rgba(106,74,42,1) 72%, rgba(79,68,25,1) 100%);
-}
+
+}*/
 
 @media (max-width: 768px) {
     /* Estilos para dispositivos móviles */
@@ -21,5 +22,26 @@ background: linear-gradient(90deg, rgba(36,13,0,1) 0%, rgba(84,63,45,1) 35%, rgb
     }
   }
 
+  /*estilos para modo oscuro*/
+
+  body{
+    transition:all 1.5 ease;
+  }
+#toggle{
+  display: none;
+}
+#label_toggle{
+  position: static;
+  cursor: pointer;
+}
+
+.dark{
+  background-color: black;
+  color: white;
+  transition: all 1.5 ease;
+}
+*{
+  color: black;
+}
   
   
