--- a/src/app/modules/producto/pages/teclados/teclados.component.html
+++ b/src/app/modules/producto/pages/teclados/teclados.component.html
@@ -1,1 +1,26 @@
-<p>teclados works!</p>
+<h1>Auriculares</h1>
+<div class="container">
+    <div class="row">
+      <div class="col-md-4" *ngFor="let i of info">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{i.Nombre}}</mat-card-title>
+            <mat-card-subtitle>Categoria:{{i.Categoria}}</mat-card-subtitle>
+           
+          </mat-card-header>
+          <img mat-card-image src="{{i.Imagen}}" alt="{{i.Alt}}">
+          <mat-card-content>
+            <p>
+              Descripcion: {{i.Descripcion}}
+            </p>
+            <p>Precio: USD{{i.Precio}}$</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button>Comprar</button>
+            <button mat-button>Agregar al carrito</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+ 
