--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -41,4 +41,10 @@
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>shopping_cart</mat-icon>
     </button>
+
+
+    <!--label para modo oscuro-->
+    <label for="toggle" id="label_toggle" ><i class="fa-solid fa-moon"></i></label>
+
+    <input type="checkbox" id="toggle" (click)="cambiarFondo()">
 </mat-toolbar>
