--- a/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.html
+++ b/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.html
@@ -1,21 +1,6 @@
-<div class="row">
-    <div class="col-lg-12" *ngIf="compravisible">
-        <div class="col-lg-4">
-            <div class="card text-bg-info mb-3">
-                <ul class="list-group">
-                    <h3>Ultima Compra:</h3>
-                    <li class="list-group-item">
-                        {{productoReciente}}
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-
 <!-- Card para mostrar TODOS los productos que se hayan ingresado -->
 <div class="row">
-    <div class="col" *ngFor="let producto of coleccionProductos">
+    <div class="col" *ngFor="let producto of coleccionAuriculares">
         <div class="card" style="width: 18rem;">
             <img src="{{producto.Imagen}}" class="card-img-top" alt="{{producto.Alt}}">
 
@@ -23,8 +8,8 @@
                 <h5 class="card-title">{{producto.Nombre}}</h5>
                 <p class="card-text">{{producto.Precio}}</p>
 
-                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalCard"
-                    (click)="mostrarVer(producto)">
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" 
+                data-bs-target="#modalCardAuriculares" (click)="mostrarVer(producto)">
                     Ver más
                 </button>
             </div>
@@ -33,7 +18,7 @@
 </div>
 
 <!-- Modal para ver más información -->
-<div class="modal fade" id="modalCard" *ngIf="modalVisible" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalCardAuriculares" *ngIf="modalVisible" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
 
@@ -55,7 +40,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="agregarProducto(productoSeleccionado)">Agregar</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Agregar al carrito</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
