--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -26,6 +26,7 @@
         <button mat-menu-item routerLink="/Celulares">Celulares</button>
         <button mat-menu-item routerLink="/Teclados">Teclados</button>
         <button mat-menu-item routerLink="/Mouses">Mouses</button>
+        <button mat-menu-item routerLink="/Productos">Productos</button>
     </mat-menu>
 
     <span class="example-spacer"></span>
