--- a/src/app/modules/inicio/components/card/card.component.html
+++ b/src/app/modules/inicio/components/card/card.component.html
@@ -1,36 +1,25 @@
+<div class="container">
+  <div class="row">
+      <h1>Inicio</h1>
 
-
-<div class="container" style="display: flex; justify-content: center;">
-  <div class="card">
-    <div class="face front">
-      <img src="./assets/fotos-inicio/productos.png" alt="">
-      <h3>Productos</h3>
-    </div>
-    <div class="face back">
-      <h3>Productos destacados</h3>
-      <p>  {{ Productosdescatacados }}</p>
-      <div class="link">
-        <a href="#productos">Details</a>
+      <div class="col">
+          <div *ngFor="let i of info" class="contenido">
+              <mat-card class="example-card">
+                  <mat-card-header>
+                    <mat-card-title>{{i.Nombre}}</mat-card-title>
+                  </mat-card-header>
+                  <img mat-card-image src="{{i.Imagen}}" alt="{{i.Alt}}">
+                  <mat-card-content>
+                    <p>
+                      {{i.Descripcion}}
+                    </p>
+                  </mat-card-content>
+                  <mat-card-actions>
+                    <button mat-button>LIKE</button>
+                    <button mat-button>SHARE</button>
+                  </mat-card-actions>
+                </mat-card>                
+          </div>
       </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="face front">
-      <img src="./assets/fotos-inicio/empresa.png" alt="">
-      <h3>Japan</h3>
-    </div>
-    <div class="face back">
-      <h3>Empresa</h3>
-      <p>  {{empresa}}</p>
-      <div class="link">
-        <a href="#">Details</a>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="content">
-      <h2>Paisaje</h2>
-      <a href="#">Ver Detalles</a>
-    </div>
   </div>
 </div>
