--- a/src/app/modules/producto/pages/auriculares/auriculares.component.html
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.html
@@ -1,73 +1,9 @@
-<!-- Card para mostrar TODOS los productos que se hayan ingresado -->
-
-
-
-<h1>auriculares</h1>
-
-<div  class="row">
-  <div class="col-lg-12" *ngIf="compravisible">
-    <div  class="col-lg-4">
-      <div class="card text-bg-info mb-3">
-        <ul class="list-group">
-          <h3>Ultima compra:</h3>
-          <li class="list-group-item">
-             {{productoReciente}}
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<div class="row">
-  <div class="col" *ngFor="let producto of coleccionProductos">
-      <div class="card" style="width: 18rem;">
-          <img src="{{producto.Imagen}}" class="card-img-top" alt="{{producto.Alt}}">
-
-          <div class="card-body">
-              <h5 class="card-title">{{producto.Nombre}}</h5>
-              <p class="card-text">{{producto.Precio}}</p>
-
-              <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalCard"
-                  (click)="mostrarVer(producto)">
-                  Ver más
-              </button>
-          </div>
+<div class="container">
+  <div class="row">
+     
+      <h1>auriculares</h1>
+      <div class="col">
+         <app-card-auriculares></app-card-auriculares>
       </div>
   </div>
 </div>
-
-<!-- Modal para ver más información -->
-<div class="modal fade" id="modalCard" *ngIf="modalVisible" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-
-          <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">{{productoSeleccionado.Nombre}}</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-
-          <div class="modal-body">
-              <img src="{{productoSeleccionado.Imagen}}" alt="{{productoSeleccionado.Alt}}" width="100px">
-
-              <div class="mb-3">
-                  {{productoSeleccionado.Descripcion}}
-              </div>
-
-              <div class="mb-3">
-                  {{productoSeleccionado.Precio}}
-              </div>
-          </div>
-
-          <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="agregarProducto(productoSeleccionado)">Agregar</button>
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-      </div>
-  </div>
-</div>
-
-
- 
