--- a/src/styles.css
+++ b/src/styles.css
@@ -1,47 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-/*body{
-    background: rgb(36,13,0);
-background: linear-gradient(90deg, rgba(36,13,0,1) 0%, rgba(84,63,45,1) 35%, rgba(106,74,42,1) 72%, rgba(79,68,25,1) 100%);
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-}*/
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
 
 @media (max-width: 768px) {
-    /* Estilos para dispositivos móviles */
-    body {
-      font-size: 16px;
-    }
-    .container {
-      width: 100%;
-      padding: 10px;
-    }
+
+  /* Estilos para dispositivos móviles */
+  body {
+    font-size: 16px;
   }
 
-  /*estilos para modo oscuro*/
-
-  body{
-    transition:all 1.5 ease;
+  .container {
+    width: 100%;
+    padding: 10px;
   }
-#toggle{
+}
+
+/*estilos para modo oscuro*/
+
+body {
+  transition: all 1.5 ease;
+}
+
+#toggle {
   display: none;
 }
-#label_toggle{
+
+#label_toggle {
   position: static;
   cursor: pointer;
 }
 
-.dark{
-  background-color: black;
+.dark {
+
+  background: rgb(36, 13, 0);
+  background: linear-gradient(90deg, rgba(36, 13, 0, 1) 0%, rgba(84, 63, 45, 1) 35%, rgba(106, 74, 42, 1) 72%, rgba(79, 68, 25, 1) 100%);
+
+
   color: white;
   transition: all 1.5 ease;
 }
-*{
-  color: black;
+
+* {
+  color: rgb(0, 0, 0);
 }
-  
-  
